@@ -1,21 +1,24 @@
 package com.ticketing.solution.infrastructure.config.security;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 @Component
 public class CorsConfig {
 
+    @Value("${cors.allow.origins}")
+    private String corsAllowOrigins;
+
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:8080"));
+        configuration.setAllowedOrigins(Arrays.asList(corsAllowOrigins.split(",")));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
-        configuration.addExposedHeader("Set-Cookie");
+        configuration.addExposedHeader("SESSIONIDD");
         configuration.setAllowedHeaders(Arrays.asList("X-CSRF-TOKEN", "Content-Type"));
         configuration.setAllowCredentials(true);
 
